--- a/style_parz.css
+++ b/style_parz.css
@@ -86,4 +86,5 @@ tr.main{
 
 html, body {
     margin: 0px;
+    background-color: rgb(41,41,41);
 }
